--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                 <label>Password</label>
                 <input type="password" id="sign-in-password" />
             </form>
+            <form id="sign-up">
+                <h3>Sign up</h3>
+                <label>Email</label>
+                <input type="email" id="sign-up-email" />
+                <label>Password</label>
+                <input type="password" id="sign-up-password" />
+            </form>
         </main>
     </body>
 </html>
